change by mohit

--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<center><h1> This is html assignment</h1></center>
+<center><h1> This is html assignment changed by mohit</h1></center>
 <hr>
 
 <p><i>This text is italic.</i></p>
